--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cypress-cucumber-preprocessor": "^4.0.0",
     "@types/node": "^10.12.11",
     "through": "^2.3.8"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --allow-empty"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,json,md}": [
+      "tslint --fix",
+      "prettier --write"
+    ]
   },
   "scripts": {
     "open": "npx cypress open -b chromium",
     "cy:update-snapshots": "cypress run --env updateSnapshots=true",
     "cy:run--snapshot-tests-with-reporter": "cypress run --reporter cypress-image-snapshot/reporter --spec \"features/addFlow/*.feature\";",
     "cy:run-tests-with-no-failure": "cypress run --env failOnSnapshotDiff=false",
-    "clean-results": "rm -rf reports && rm -rf allure-results",
-    "merge-report": "npx mochawesome-merge --reportDir reports/separate-reports > reports/full_report.json",
+    "clean-results": "rm -rf cypress/reports/ && rm -rf allure-results",
+    "merge-report": "npx mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/output.json",
     "generate-report": "marge reports/full_report.json -o reports/html",
     "test:virtualization": "cypress run -b chrome -r mocha-allure-reporter --spec \"features/virtualization/*.feature\";",
     "test:helm": "cypress run -b chrome --env TAGS='@regression or @smoke and not @manual' -r mocha-allure-reporter --spec \"features/helm/*.feature\";",
@@ -26,6 +38,7 @@
     "report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
     "specs": "npx cypress run --record --key d5c4e048-0e4b-4276-a769-591a08e5325a --group 2x-chrome --parallel --ci-build-id test2 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome",
     "headless": "npx cypress run --spec cypress/integration/features/scenarios/*.feature --browser chrome --headless",
+    "tags": "npm run clean-results; npx cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report;",
     "pretty": "npx prettier --no-config './cypress/**/*.{ts,js}' --write",
     "lint": "npx tslint -c tslint.json 'cypress/integration/features/**/**/*.ts'",
     "clean:screenshots": "npx cypress/screenshots/*",
@@ -33,6 +46,7 @@
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^4.0.2",
+    "@types/cypress-cucumber-preprocessor": "^4.0.0",
     "allure-commandline": "^2.0.0",
     "cypress": "^5.0.0",
     "cypress-axe": "^0.8.1",
@@ -41,17 +55,24 @@
     "cypress-multi-reporters": "^1.4.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "mocha": "5.2.0",
     "mocha-allure-reporter": "^1.4.0",
     "mocha-junit-reporter": "^2.0.0",
     "mochawesome": "4.1.0",
     "mochawesome-merge": "^4.1.0",
     "mochawesome-report-generator": "^5.1.0",
+    "prettier": "^2.1.2",
     "ts-loader": "^6.2.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "3.8.3",
     "webpack": "4.44.0"
   },
   "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": false,
     "step_definitions": "cypress/integration/features/step_definitions/**/"
   }
 }
