--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cy:run-tests-with-no-failure": "cypress run --env failOnSnapshotDiff=false",
     "clean-results": "rm -rf cypress/reports/ && rm -rf allure-results",
     "merge-report": "npx mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/output.json",
-    "generate-report": "marge reports/full_report.json -o reports/html",
+    "generate-report": "npx marge cypress/reports/output.json -o reports/html",
     "test:virtualization": "cypress run -b chrome -r mocha-allure-reporter --spec \"features/virtualization/*.feature\";",
     "test:helm": "cypress run -b chrome --env TAGS='@regression or @smoke and not @manual' -r mocha-allure-reporter --spec \"features/helm/*.feature\";",
     "test:topology": "cypress run -b chrome -r mocha-allure-reporter --spec \"features/topology/*.feature\";",
@@ -38,7 +38,7 @@
     "report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
     "specs": "npx cypress run --record --key d5c4e048-0e4b-4276-a769-591a08e5325a --group 2x-chrome --parallel --ci-build-id test2 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome",
     "headless": "npx cypress run --spec cypress/integration/features/scenarios/*.feature --browser chrome --headless",
-    "tags": "npm run clean-results; npx cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report;",
+    "tags": "npm run clean-results; npx cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report; npm run generate-report;",
     "pretty": "npx prettier --no-config './cypress/**/*.{ts,js}' --write",
     "lint": "npx tslint -c tslint.json 'cypress/integration/features/**/**/*.ts'",
     "clean:screenshots": "npx cypress/screenshots/*",
