--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
   },
   "scripts": {
     "open": "npx cypress open -b chromium",
-    "cy:update-snapshots": "cypress run --env updateSnapshots=true",
-    "cy:run--snapshot-tests-with-reporter": "cypress run --reporter cypress-image-snapshot/reporter --spec \"features/addFlow/*.feature\";",
-    "cy:run-tests-with-no-failure": "cypress run --env failOnSnapshotDiff=false",
     "clean-results": "rm -rf cypress/reports/ && rm -rf allure-results",
     "merge-report": "npx mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/output.json",
     "generate-report": "npx marge cypress/reports/output.json -o reports/html",
+    "specs": "npx cypress run --record --key d5c4e048-0e4b-4276-a769-591a08e5325a --group 2x-chrome --parallel --ci-build-id test2 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome",
+    "headless": "npx cypress run --spec cypress/integration/features/scenarios/*.feature --browser chrome --headless",
+    "tags": "npm run clean-results; npx cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report; npm run generate-report;",
+    "pretty": "npx prettier --no-config './cypress/**/*.{ts,js}' --write",
+    "lint": "npx tslint -c tslint.json 'cypress/integration/features/**/**/*.ts'",
+    "allure-report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
+
+    "cy:update-snapshots": "cypress run --env updateSnapshots=true",
+    "cy:run--snapshot-tests-with-reporter": "cypress run --reporter cypress-image-snapshot/reporter --spec \"features/addFlow/*.feature\";",
+    "cy:run-tests-with-no-failure": "cypress run --env failOnSnapshotDiff=false",
     "test:virtualization": "cypress run -b chrome -r mocha-allure-reporter --spec \"features/virtualization/*.feature\";",
     "test:helm": "cypress run -b chrome --env TAGS='@regression or @smoke and not @manual' -r mocha-allure-reporter --spec \"features/helm/*.feature\";",
     "test:topology": "cypress run -b chrome -r mocha-allure-reporter --spec \"features/topology/*.feature\";",
@@ -35,12 +42,6 @@
     "test": "npm run clean-results; npm run test:addFlow; npm run test:pipeline; npm run test:knative; npm run test:helm; npm run test:topology",
     "cypress": "npm run clean-results; cypress run -b chrome --env TAGS='@smoke and not @manual' -r mocha-allure-reporter --spec \"features/*/*.feature\"; npm run merge-report; npm run generate-report",
     "copyScreenshots": "cp -r screenshots allure-report/attachments",
-    "report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
-    "specs": "npx cypress run --record --key d5c4e048-0e4b-4276-a769-591a08e5325a --group 2x-chrome --parallel --ci-build-id test2 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome",
-    "headless": "npx cypress run --spec cypress/integration/features/scenarios/*.feature --browser chrome --headless",
-    "tags": "npm run clean-results; npx cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report; npm run generate-report;",
-    "pretty": "npx prettier --no-config './cypress/**/*.{ts,js}' --write",
-    "lint": "npx tslint -c tslint.json 'cypress/integration/features/**/**/*.ts'",
     "clean:screenshots": "npx cypress/screenshots/*",
     "clean:video": "npx rimraf cypress/videos/*"
   },
