--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "scripts": {
     "open": "npx cypress open -b chromium",
-    "clean-results": "rm -rf cypress/reports/ && rm -rf allure-results",
+    "clean-results": "rm -rf reports/ && rm -rf cypress/reports/ && rm -rf allure-results",
     "merge-report": "npx mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/output.json",
     "generate-report": "npx marge cypress/reports/output.json -o reports/html",
     "specs": "npx cypress run --record --key d5c4e048-0e4b-4276-a769-591a08e5325a --group 2x-chrome --parallel --ci-build-id test2 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome",
     "headless": "npx cypress run --spec cypress/integration/features/scenarios/*.feature --browser chrome --headless",
-    "tags": "npm run clean-results; npx cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report; npm run generate-report;",
+    "tags": "npm run clean-results; npx cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --env \"TAGS=@home\" --browser chrome; npm run merge-report; npm run generate-report;",
     "pretty": "npx prettier --no-config './cypress/**/*.{ts,js}' --write",
     "lint": "npx tslint -c tslint.json 'cypress/integration/features/**/**/*.ts'",
     "allure-report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
