--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "pretty": "npx prettier --no-config './cypress/**/*.{ts,js}' --write",
     "lint": "npx tslint -c tslint.json 'cypress/integration/features/**/**/*.ts'",
     "allure-report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
-
+    "parallel": "npm run clean-results; npx cypress run --record --key d5c4e048-0e4b-4276-a769-591a08e5325a --parallel --ci-build-id test3 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report; npm run generate-report;",
     "cy:update-snapshots": "cypress run --env updateSnapshots=true",
     "cy:run--snapshot-tests-with-reporter": "cypress run --reporter cypress-image-snapshot/reporter --spec \"features/addFlow/*.feature\";",
     "cy:run-tests-with-no-failure": "cypress run --env failOnSnapshotDiff=false",
