--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@percy/cypress": "^2.3.2",
+    "@slack/web-api": "^5.13.0",
     "@types/node": "^10.12.11",
     "cypress-cucumber-preprocessor": "^4.0.0",
     "cypress-xpath": "^1.6.0",
-    "@slack/web-api": "^5.13.0",
     "through": "^2.3.8"
   },
   "husky": {
@@ -32,6 +33,7 @@
     "lint": "npx tslint -c tslint.json 'cypress/integration/features/**/**/*.ts'",
     "allure-report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
     "parallel": "npm run clean-results; npx cypress run --record --key d5c4e048-0e4b-4276-a769-591a08e5325a --parallel --ci-build-id test3 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome; npm run merge-report; npm run generate-report;",
+    "percy": "PERCY_TOKEN=7407b0d1e0fe59cb73ed747da378dd8b0bb9dd4d7f3e14147c051a35b83a9565 npx percy exec -- cypress run --spec \"cypress/integration/features/scenarios/*.feature\" --env \"TAGS=@home\" --browser chrome",
     "cy:update-snapshots": "cypress run --env updateSnapshots=true",
     "cy:run--snapshot-tests-with-reporter": "cypress run --reporter cypress-image-snapshot/reporter --spec \"features/addFlow/*.feature\";",
     "cy:run-tests-with-no-failure": "cypress run --env failOnSnapshotDiff=false",
