--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
   e2e:
-    image: "cypress/included:5.5.0"
+    image: "cypress/included:9.1.1"
     working_dir: /e2e
-    command: "--record --key d5c4e048-0e4b-4276-a769-591a08e5325a --parallel --ci-build-id test9 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome"
+    command: "--record --key d5c4e048-0e4b-4276-a769-591a08e5325a --parallel --ci-build-id test17 --spec \"cypress/integration/features/scenarios/*.feature\" --browser chrome --env ENV=qa"
     volumes:
       - $PWD:/e2e
